# Hand-tear-large-model-development

./: .gitignore  README.md  pyproject.toml  作业需求.md
agent-chat-server/: README.md  langgraph.json  langgraph_bak.json  pyproject.toml  run.py
agent-chat-server/src/agent/: agent_config.py  graph.py  mcp_manager.py  sub_agents.py  supervisor.py
agent-chat-server/workflow_sql/: .env.example  README.md  __init__.py  agent_types.py  async_chart_generator.py  cache_manager.py  config.py  database.py  graph.py  graph_builder.py  logging_config.py  mcp_client.py  mcp_config.py  nodes.py  react_graph.py  react_tools.py  requirements.txt  tools.py
agent-chat-ui/: CHART_RENDERING.md  README.md  eslint.config.js  next.config.mjs  package-lock.json  package.json  prettier.config.js
agent-chat-ui/src/app/: layout.tsx  page.tsx
agent-chat-ui/src/components/thread/: MultimodalPreview.tsx  index.tsx  markdown-text.tsx  smart-message-renderer.tsx
agent-chat-ui/src/components/thread/history/: animations.tsx  empty-state.tsx  import-export.tsx  index.tsx  search.tsx  tags.tsx
agent-chat-ui/src/components/thread/messages/: ai.tsx  tool-calls.tsx
agent-chat-ui/src/components/ui/: alert-dialog.tsx  badge.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  password-input.tsx  popover.tsx  select.tsx
agent-chat-ui/src/hooks/: use-file-upload.tsx
agent-chat-ui/src/locales/en/: common.json
agent-chat-ui/src/locales/zh/: common.json
agent-chat-ui/src/providers/: Stream.tsx  Thread.tsx  ThreadSettings.tsx
(+2 files in other folders)
